# Project-Dog-Shelter

./: CMakeLists.txt  README.md
data/: AdoptedDogs.csv  AdoptedDogs.html  AdoptedDogs.txt  ShelterDogs.txt  ShelterDogs5.db
libs/: sqlite3.h
src/GUI/: GUI.cpp  GUI.h  GUIUser.cpp  TabelList.cpp  TabelList.h  UserInterface.cpp  UserInterface.h
src/action/: Action.h
src/exception/: Exception.h
src/main/: main.cpp
src/model/: Dog.cpp  Dog.h
src/repository/: DBRepository.cpp  RepoAdoptedDogs.cpp  RepoAdoptedDogs.h  RepoShelterDogs.cpp  RepoShelterDogs.h
src/service/: ServiceAdmin.cpp  ServiceAdmin.h  ServiceUser.cpp  ServiceUser.h
src/tests/: tests.cpp  tests.h
